--- a/index.html
+++ b/index.html
@@ -11,15 +11,38 @@
 </head>
 <body>
 
-  <div class="calWrpper">
+  <!-- <div class="calWrpper">
     <p class="cal1">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
   
     <p class="cal2">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
-    
-  </div>
+
+  </div> -->
   <!-- <div class="img-wrapper">
     <img src="images/ph_main_pc.jpg" alt="">
   </div> -->
+
+  <div class="cardWrapper">
+    <div class="ex-card">
+      <h2 class="h2-heading">title</h2>
+      <p class="p-text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+    </div>
+
+    <div class="ex-card">
+      <h2 class="h2-heading">title</h2>
+      <p class="p-text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+    </div>
+
+    <div class="ex-card">
+      <h2 class="h2-heading">title</h2>
+      <p class="p-text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+    </div>
+    
+    <div class="ex-card">
+      <h2 class="h2-heading">title</h2>
+      <p class="p-text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+    </div>
+
+  </div>
 
 
 <!-- 
