--- a/index.html
+++ b/index.html
@@ -121,13 +121,20 @@
   </div> -->
   <!-- column__wrapper -->
 
-  <div class="main-container">
+  <!-- <div class="main-container">
     <header>header</header>
     <div class="ad">ad</div>
     <article>article</article>
     <aside>aside</aside>
     <footer>footer</footer>
+  </div> -->
+
+  <!-- <div class="google-map">
+    <iframe class="map1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3260.8717040697516!2d136.89749961567338!3d35.184750080312874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600376cbc7b0efb1%3A0xb9d3e9789275a677!2z5ZCN5Y-k5bGL5Z-O!5e0!3m2!1sja!2sjp!4v1655339269449!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
+  <div class="google-map2">
+    <iframe class="map2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3260.8717040697516!2d136.89749961567338!3d35.184750080312874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600376cbc7b0efb1%3A0xb9d3e9789275a677!2z5ZCN5Y-k5bGL5Z-O!5e0!3m2!1sja!2sjp!4v1655339269449!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div> -->
 
 
 <!-- 
@@ -221,46 +228,155 @@
     <h1 class="heading__jp--large">見出しテキストが入ります</h1>
   </div> -->
 
-  <!-- <ul class="list">
-    <li class="list__item">
-      <a href="#" class="list__wrapper">
-        <figure  class="list__image"><img src="images/dmy_thumb01@2x.jpg" alt=""></figure>
+  <!-- <ul class="thumtestCard">
+    <li class="thumtestCard__item">
+      <a href="#" class="thumtestCard__wrapper">
+        <figure  class="thumtestCard__image"><img src="images/dmy_thumb01@2x.jpg" alt=""></figure>
 
-        <h3 class="list__title">キャプションテキスト</h3>
-        <p class="list__text">説明テキスト説明テキスト説明テキスト説明テキスト</p>
+        <h3 class="thumtestCard__title">キャプションテキスト</h3>
+        <p class="thumtestCard__text">説明テキスト説明テキスト説明テキスト説明テキスト</p>
       </a>
     </li>
 
-    <li class="list__item">
-      <a href="#" class="list__wrapper">
-        <figure  class="list__image"><img src="images/dmy_thumb01@2x.jpg" alt=""></figure>
+    <li class="thumtestCard__item">
+      <a href="#" class="thumtestCard__wrapper">
+        <figure  class="thumtestCard__image"><img src="images/ph_main_pc.jpg" alt=""></figure>
 
-        <h3 class="list__title">キャプションテキスト</h3>
-        <p class="list__text">説明テキスト説明テキスト説明テキスト説明テキスト</p>
+        <h3 class="thumtestCard__title">キャプションテキスト</h3>
+        <p class="thumtestCard__text">説明テキスト説明テキスト説明テキスト説明テキスト</p>
       </a>
     </li>
 
-    <li class="list__item">
-      <a href="#" class="list__wrapper">
-        <figure  class="list__image"><img src="images/dmy_thumb01@2x.jpg" alt=""></figure>
+    <li class="thumtestCard__item">
+      <a href="#" class="thumtestCard__wrapper">
+        <figure  class="thumtestCard__image"><img src="images/ph_main_sp@2x.jpg" alt=""></figure>
 
-        <h3 class="list__title">キャプションテキスト</h3>
-        <p class="list__text">説明テキスト説明テキスト説明テキスト説明テキスト</p>
+        <h3 class="thumtestCard__title">キャプションテキスト</h3>
+        <p class="thumtestCard__text">説明テキスト説明テキスト説明テキスト説明テキスト</p>
       </a>
     </li>
 
-    <li class="list__item">
-      <a href="#" class="list__wrapper">
-        <figure  class="list__image"><img src="images/dmy_thumb01@2x.jpg" alt=""></figure>
+    <li class="thumtestCard__item">
+      <a href="#" class="thumtestCard__wrapper">
+        <figure  class="thumtestCard__image"><img src="images/dmy_thumb01@2x.jpg" alt=""></figure>
 
-        <h3 class="list__title">キャプションテキスト</h3>
-        <p class="list__text">説明テキスト説明テキスト説明テキスト説明テキスト</p>
+        <h3 class="thumtestCard__title">キャプションテキスト</h3>
+        <p class="thumtestCard__text">説明テキスト説明テキスト説明テキスト説明テキスト</p>
       </a>
     </li>
-
-
 
   </ul>  -->
+
+  <!-- <div class="mediaCard">
+    <div class="mediaCard__body">
+      <h2 class="mediaCard__title">キャッチコピー</h2>
+      <p class="mediaCard__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+    </div>
+
+    <figure  class="mediaCard__image">
+      <img src="images/dmy_thumb01@2x.jpg" alt="">
+    </figure>
+  </div>
+
+  <div class="mediaCard">
+    <div class="mediaCard__body">
+      <h2 class="mediaCard__title">キャッチコピー</h2>
+      <p class="mediaCard__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+    </div>
+
+    <figure  class="mediaCard__image">
+      <img src="images/ph_main_pc.jpg" alt="">
+    </figure>
+  </div>
+
+  <div class="mediaCard">
+    <div class="mediaCard__body">
+      <h2 class="mediaCard__title">キャッチコピー</h2>
+      <p class="mediaCard__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+    </div>
+
+    <figure  class="mediaCard__image">
+      <img src="images/dmy_thumb01.jpg" alt="">
+    </figure>
+  </div> -->
+
+  <!-- 市松模様 -->
+  <!-- <ul class="ichimatu">
+    <li class="ichimatu__item">
+      <div class="ichimatu__body">
+        <h2 class="ichimatu__title">キャッチコピー</h2>
+        <p class="ichimatu__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+      </div>
+
+      <div class="ichimatu__image">
+        <img src="images/dmy_thumb01.jpg" alt="">
+      </div>
+    </li>
+
+    <li class="ichimatu__item">
+      <div class="ichimatu__body">
+        <h2 class="ichimatu__title">キャッチコピー</h2>
+        <p class="ichimatu__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+      </div>
+
+      <div class="ichimatu__image">
+        <img src="images/ph_main_pc.jpg" alt="">
+      </div>
+    </li>
+
+    <li class="ichimatu__item">
+      <div class="ichimatu__body">
+        <h2 class="ichimatu__title">キャッチコピー</h2>
+        <p class="ichimatu__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+      </div>
+
+      <div class="ichimatu__image">
+        <img src="images/bg_header_service.jpg" alt="">
+      </div>
+    </li>
+
+  </ul> -->
+
+  <!--
+    市松模様応用
+  -->
+
+  <ul class="ichimatu2">
+    <li class="ichimatu2__item normal">
+      <div class="ichimatu2__body">
+        <h2 class="ichimatu2__title">キャッチコピー</h2>
+        <p class="ichimatu2__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+      </div>
+
+      <div class="ichimatu2__image">
+        <img src="images/dmy_thumb01.jpg" alt="">
+      </div>
+    </li>
+
+    <li class="ichimatu2__item rev">
+      <div class="ichimatu2__body">
+        <h2 class="ichimatu2__title">キャッチコピー</h2>
+        <p class="ichimatu2__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+      </div>
+
+      <div class="ichimatu2__image">
+        <img src="images/ph_main_pc.jpg" alt="">
+      </div>
+    </li>
+
+    <li class="ichimatu2__item normal">
+      <div class="ichimatu2__body">
+        <h2 class="ichimatu2__title">キャッチコピー</h2>
+        <p class="ichimatu2__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+      </div>
+
+      <div class="ichimatu2__image">
+        <img src="images/bg_header_service.jpg" alt="">
+      </div>
+    </li>
+
+
+  </ul>
 
   <!-- <ul class="list list--pc-3col">
     <li class="list--pc-3col__item">
