--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     市松模様応用
   -->
 
-  <ul class="ichimatu2">
+  <!-- <ul class="ichimatu2">
     <li class="ichimatu2__item normal">
       <div class="ichimatu2__body">
         <h2 class="ichimatu2__title">キャッチコピー</h2>
@@ -376,7 +376,25 @@
     </li>
 
 
-  </ul>
+  </ul> -->
+
+<!-- <section class="bg inner">
+  <div class="bg__container">
+    <h2 class="bg__title">タイトル</h2>
+    <p class="bg__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+  </div>
+
+  <div class="bg__container __bg">
+    <h2 class="bg__title">タイトル</h2>
+    <p class="bg__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+  </div>
+
+  <div class="bg__container">
+    <h2 class="bg__title">タイトル</h2>
+    <p class="bg__text">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
+  </div>
+</section> -->
+<!-- /bg -->
 
   <!-- <ul class="list list--pc-3col">
     <li class="list--pc-3col__item">
@@ -492,7 +510,7 @@
   </div>
 </div> -->
 
-<!-- <div class="mainVisual">
+<div class="mainVisual">
   <div class="mainVisual__body">
     <h1 class="mainVisual__title">父と息子の<br>ふたり旅</h1>
     <p class="mainVisual__text">説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト</p>
@@ -505,7 +523,7 @@
       <img src="images/ph_main_pc.jpg" alt="">
     </picture>
   </div>
-</div> -->
+</div>
 
 <!-- <div class="input-wrapper">
   <input type="submit" value="送信っ！">
